--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -15,7 +15,7 @@ analyzer:
     - /**.md
 
 formatter:
-  trailing_commas: preserve
+  trailing_commas: automate
 
 linter:
   rules:
@@ -26,3 +26,4 @@ linter:
     directives_ordering: false
     public_member_api_docs: false
     prefer_constructors_over_static_methods: false
+    omit_local_variable_types: false
