--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,14 +11,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  
+  flutter_localizations:
+    sdk: flutter
   quran: ^1.4.1
-  google_fonts: ^6.3.2
+  shared_preferences: ^2.5.3
 
 dev_dependencies:
   flutter_test:
-    sdk: flutter
-  integration_test:
     sdk: flutter
   very_good_analysis: ^10.0.0
 
@@ -30,17 +29,12 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-      - assets/surah.json
       - assets/fonts/
 
   fonts:
-    - family: NotoNastaliqUrdu
-      fonts:
-        - asset: assets/fonts/NotoNastaliqUrdu-Bold.ttf
-        - asset: assets/fonts/NotoNastaliqUrdu-Regular.ttf
     - family: Kitab
       fonts:
         - asset: assets/fonts/kitab.ttf
-    - family: Aldhabi
+    - family: Hafs
       fonts: 
-        - asset: assets/fonts/aldhabi.ttf
+        - asset: assets/fonts/Hafs.ttf
