Prepare for v1.0.0 release: CI/CD setup and optimizations

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: my_quran
 description: A minimal app to read the Quran.
 
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
-version: 1.0.0+1
+version: 1.0.0
 
 environment:
   sdk: ^3.9.2
@@ -13,7 +13,9 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-  quran: ^1.4.1
+  quran:
+    path: ./packages/quran-1.4.1
+  scrollable_positioned_list: ^0.3.8
   shared_preferences: ^2.5.3
 
 dev_dependencies:
@@ -30,11 +32,13 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
       - assets/fonts/
+      - assets/quran.json
+      - assets/search_index.json
 
   fonts:
-    - family: Kitab
-      fonts:
-        - asset: assets/fonts/kitab.ttf
-    - family: Hafs
+    - family: Scheherazade
       fonts: 
-        - asset: assets/fonts/Hafs.ttf
+        - asset: assets/fonts/ScheherazadeNew-Medium.ttf
+    - family: Rustam
+      fonts: 
+        - asset: assets/fonts/rustam_quranR3HOQ.ttf
