feat: add hafs quran text and font
ui: add the option to switch font-family in font-settings-sheet.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ flutter:
   assets:
       - assets/fonts/
       - assets/quran.json
+      - assets/kfgqpc_hafs.json
       - assets/search_index.json
 
   fonts:
@@ -40,3 +41,6 @@ flutter:
     - family: Rustam
       fonts: 
         - asset: assets/fonts/rustam_quranR3HOQ.ttf
+    - family: Hafs
+      fonts:
+        - asset: assets/fonts/HafsSmart.ttf
