--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -133,3 +133,29 @@ jobs:
           artifacts: "build/app/outputs/apk/release/*.apk"
           token: ${{ secrets.GITHUB_TOKEN }}
           generateReleaseNotes: true
+
+  build_and_deploy_web:
+    name: Build and Deploy Web
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup Flutter
+        uses: subosito/flutter-action@v2
+        with:
+          channel: 'stable'
+          flutter-version-file: pubspec.yaml
+          cache: true
+      
+      - name: Get Dependencies
+        run: flutter pub get
+
+      - name: Build Web App
+        run: flutter build web --pwa-strategy=offline-first --base-href /my_quran/
+
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v4
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./build/web
