--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,46 +1,44 @@
 name: my_quran
 description: A minimal app to read the Quran.
 
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
-version: 1.3.0+10
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
+version: 1.4.0+11
 
 environment:
-  sdk: '>=3.10.0 <4.0.0'
-  flutter: 3.38.5
+    sdk: ">=3.10.0 <4.0.0"
+    flutter: 3.38.5
 
 dependencies:
-  flutter:
-    sdk: flutter
-  flutter_localizations:
-    sdk: flutter
-  scrollable_positioned_list: ^0.3.8
-  shared_preferences: ^2.5.3
+    flutter:
+        sdk: flutter
+    flutter_localizations:
+        sdk: flutter
+    scrollable_positioned_list: ^0.3.8
+    shared_preferences: ^2.5.3
 
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
-  flutter_launcher_icons: ^0.14.4
-  very_good_analysis: ^10.0.0
-
+    flutter_test:
+        sdk: flutter
+    flutter_launcher_icons: ^0.14.4
+    very_good_analysis: ^10.0.0
 
 # The following section is specific to Flutter.
 flutter:
+    uses-material-design: true
 
-  uses-material-design: true
+    assets:
+        - assets/fonts/
+        - assets/quran.json
+        - assets/kfgqpc_hafs.json
+        - assets/search_index.json
 
-  assets:
-      - assets/fonts/
-      - assets/quran.json
-      - assets/kfgqpc_hafs.json
-      - assets/search_index.json
-
-  fonts:
-    - family: Scheherazade
-      fonts:
-        - asset: assets/fonts/subset-ScheherazadeNew.ttf
-    - family: Rustam
-      fonts:
-        - asset: assets/fonts/rustam_quranR3HOQ.ttf
-    - family: Hafs
-      fonts:
-        - asset: assets/fonts/HafsSmart.ttf
+    fonts:
+        - family: Scheherazade
+          fonts:
+              - asset: assets/fonts/subset-ScheherazadeNew.ttf
+        - family: Rustam
+          fonts:
+              - asset: assets/fonts/rustam_quranR3HOQ.ttf
+        - family: Hafs
+          fonts:
+              - asset: assets/fonts/HafsSmart.ttf
