--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
     flutter: 3.38.5
 
 dependencies:
+    collection: ^1.19.1
     flutter:
         sdk: flutter
     flutter_localizations:
